demo1/src/main/kotlin/com/example/demo/global/error/CustomErrorProperty.kt
package com.example.demo.global.error

interface CustomErrorProperty {

    fun status(): Int

    fun message(): String

}